syntax = "proto3";

option go_package = "github.com/pion/ion-sfu/cmd/server/grpc/proto";

package sfu;

service SFU {
    rpc Signal(stream SignalRequest) returns (stream SignalReply) {}
}

message SignalRequest {
    oneof payload {
        SessionDescription negotiate = 1;
        Trickle trickle = 2;
    }
}

message SignalReply {
    oneof payload {
        SessionDescription negotiate = 1;
        Trickle trickle = 2;
    }
}

message ConnectReply {
    string pid = 1;
    SessionDescription answer = 2;
}

message Subscribe {
    repeated int32 ssrc = 1;
}

message Trickle {
    string candidate = 1;
}

message SessionDescription {
    string type = 1; // "answer" | "offer" | "pranswer" | "rollback"
    bytes sdp = 2;
}